--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Catagram</string>
-    <string name="action_settings">Settings</string>
+    <string name="main_title">Catagram</string>
+    <string name="main_menu_about">About</string>
+    <string name="about_title">About</string>
 </resources>
